# phrsma-bot

./: Cargo.toml
.github/workflows/: deploy.yml
src/: main.rs
src/application/: agent_service.rs
src/domain/: ability.rs  agent.rs  mod.rs  role.rs
src/infrastructure/: mod.rs
src/infrastructure/driven/discord/: client.rs  context.rs  mod.rs
src/infrastructure/driven/discord/commands/: mod.rs
src/infrastructure/driven/discord/commands/random_agents/: embed.rs  mod.rs  parameter.rs
src/interfaces/discord/: commands.rs
