[package]
name = "valorant-random-agent-picker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
poise = "0.6.1"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
